--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dio: ^5.9.0
   pretty_dio_logger: ^1.4.0
   flutter_screenutil: ^5.9.3
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
